@@ -344,6 +344,8 @@ Class restartTransition()
 {
 	if( (self=[super init]) ) {
 
+		CGSize s = [[CCDirector sharedDirector] winSize];
+
 		float x,y;
 
 		CGSize size = [[CCDirector sharedDirector] winSize];
@@ -371,9 +373,9 @@ Class restartTransition()
 		CCMenuItemImage *item3 = [CCMenuItemImage itemWithNormalImage:@"f1.png" selectedImage:@"f2.png" target:self selector:@selector(nextCallback:)];
 		CCMenu *menu = [CCMenu menuWithItems:item1, item2, item3, nil];
 		menu.position = CGPointZero;
-		item1.position = ccp( size.width/2 - 100,30);
-		item2.position = ccp( size.width/2, 30);
-		item3.position = ccp( size.width/2 + 100,30);
+		item1.position = ccp( s.width/2 - item2.contentSize.width*2, item2.contentSize.height/2);
+		item2.position = ccp( s.width/2, item2.contentSize.height/2);
+		item3.position = ccp( s.width/2 + item2.contentSize.width*2, item2.contentSize.height/2);
 		[self addChild: menu z:1];
 
 		[self schedule:@selector(step:) interval:1.0f];
